<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tasklist"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/nav_menu_tasklist" />
        <item
            android:id="@+id/nav_manageruser"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_menu_manageruser_title" />
        <item
            android:id="@+id/nav_managertask"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_menu_managertask_title" />

    </group>
    <item android:title="@string/nav_menu_category_system_title">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/nav_menu_setting_title" />
        </menu>
    </item>
</menu>
