<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">




        <include layout="@layout/layout_common_empty"/>
    </FrameLayout>

    <android.support.design.widget.TabLayout
        android:id="@+id/tab_layout"
        app:tabMode="fixed"
        app:tabIndicatorHeight="2dp"
        app:tabBackground="?attr/colorPrimary"
        app:tabGravity="fill"
        app:tabSelectedTextColor="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TabItem
            android:text="@string/tab_task_undone_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <android.support.design.widget.TabItem
            android:text="@string/tab_task_done_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <android.support.design.widget.TabItem
            android:text="@string/tab_task_error_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager_layout"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"/>

</LinearLayout>